# learn-jax

./: 1-quick-start.ipynb  2-key-concept.ipynb  6-debugging.ipynb  7-pseudorandom.ipynb  caveat.ipynb  pyproject.toml
official/: 2-key-concept.ipynb  3-jit.ipynb  4-vmap.ipynb  5-autodiff.ipynb  8-pytree.ipynb
uva/: 4-optimization-and-initialization.ipynb  activation.ipynb  intro.ipynb
